# DDSCore

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ddscore  Dockerfile.px4  README.md  config.yaml  deployment.yaml  entrypoint-ddscore.sh  entrypoint-px4.sh  entrypoint.sh
artist/src/: main.py
dockerfiles/: Dockerfile.ddscore  Dockerfile.px4  Dockerfile.qgc  Dockerfile.rosmaster
dockerfiles/entrypoints/: entrypoint-px4.sh  entrypoint-qgc.sh  entrypoint-rosmaster.sh
master/install/: local_setup.sh  setup.sh
master/install/master/lib/master/: node
master/install/master/share/master/: local_setup.sh  package.sh
master/log/: latest_build
master/src/master/: CMakeLists.txt  package.xml
master/src/master/src/: listener.cpp  master_node.cpp  mqtt.cpp  publisher.cpp  trajectories.json
mosquitto/: Dockerfile.mosquitto  testfile.yaml
scripts/: builder.py
scripts/k8s-builder-files/: new_config.yaml  new_deploy.yaml
testfiles/: config.yaml  deployment.yaml
tmux/: session.yml  start.sh
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/log/: latest_build
workspace/src/core/: CMakeLists.txt  package.xml
workspace/src/core/src/: base_node.cpp  core_node.cpp  offb_node.cpp
workspace/src/core_msgs/: CMakeLists.txt  package.xml
workspace/src/core_msgs/msg/: StatusProvider.msg
workspace/src/link/: CMakeLists.txt  package.xml
workspace/src/link/src/: link_node.cpp  listener.cpp  mqtt.cpp  publisher.cpp
workspace/src/test_set/: CMakeLists.txt  package.xml
workspace/src/test_set/src/: test_case.cpp
(+112 files in other folders)
